# trading-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_AUDUSD.csv  test_USDCAD.csv
account_review/: Portfolio4.html  account_review_flow.py  excluded_symbols.txt  mt5_account_risk_flow.py  run_account_review.cmd  run_account_review_preflight.cmd  run_backtests_only.cmd  run_real_vs_backtest_only.cmd  run_resume_last_comparison.cmd  run_stage1_mt5_brokers_A_B.cmd  stage1_real_results_vs_backtest.py
basket_analysis/: README.md  basket_analysis.py  basket_overlay_research.py  my_readme.txt  overnight_daily_target_optimizer.py  run_basket_analysis_1_compare.cmd  run_basket_analysis_2_bar.cmd  run_basket_analysis_3_tick.cmd  run_basket_analysis_4_filter.cmd  run_basket_analysis_5_overlay.cmd  run_combine.cmd  run_overnight_daily_target_optimizer.cmd
cmd/: analyze_live.cmd  build_portfolio.cmd  compare_backtests.cmd  set_risk.cmd
config/: analyze_live.yaml  compare_backtests.yaml  portfolio.yaml  risk_management.yaml
data/: .gitkeep
handover_files/: HANDOFF_00_quick_start.md  HANDOFF_01_project_overview.md  HANDOFF_02_technical_reference.md  HANDOFF_03_conversation_history.md  HANDOFF_04_working_with_user.md  HANDOFF_05_overlay_research_resume.md  basket_analysis.py  run_basket_analysis_1_compare.cmd  run_basket_analysis_2_bar.cmd  run_basket_analysis_3_tick.cmd  run_basket_analysis_4_filter.cmd  run_combine.cmd
mt5csv_combine/: INSTANT_NightForex_AUDUSD_H1_20_400134.csv  INSTANT_NightForex_USDCAD_H1_20_400134.csv  mt5csv_combine.py  (+2 more)
tests/: __init__.py
(+71 files in other folders)
